// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App.js スナップショット 新規登録の場合 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    新規登録
  </header>
</div>
`;

exports[`App.js スナップショット 更新の場合 1`] = `
<div
  className="App"
>
  <header
    className="App-header2"
  >
    更新
  </header>
</div>
`;
